evaluation-runs/551/k8s/validate/resources/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-api
  namespace: rrb-app
  labels:
    app: account-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-api
  template:
    metadata:
      labels:
        app: account-api
    spec:
      containers:
        - name: account-api
          image: ralfx22/rrb-account-api
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: account-api-mongo
  namespace: rrb-app
  labels:
    app: account-api-mongo
spec:
  serviceName: account-api-mongo
  replicas: 1
  selector:
    matchLabels:
      app: account-api-mongo
  template:
    metadata:
      labels:
        app: account-api-mongo
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: account-api-mongo
          image: mongo:6.0.5
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
              subPath: data-db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: account-api-mongo-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: rrb-app
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ralfx22/rrb-api-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset-management-api
  namespace: rrb-app
  labels:
    app: asset-management-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asset-management-api
  template:
    metadata:
      labels:
        app: asset-management-api
    spec:
      containers:
        - name: asset-management-api
          image: ralfx22/rrb-asset-management-api
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: asset-management-api-mysql
  namespace: rrb-app
  labels:
    app: asset-management-api-mysql
spec:
  serviceName: asset-management-api-mysql
  replicas: 1
  selector:
    matchLabels:
      app: asset-management-api-mysql
  template:
    metadata:
      labels:
        app: asset-management-api-mysql
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: asset-management-api-mysql
          image: mysql:8.0.33
          args:
            - --default-authentication-plugin=mysql_native_password
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
              subPath: mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: asset-management-api-mysql-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: rrb-app
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: ralfx22/rrb-config-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: rrb-app
  labels:
    app: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: ralfx22/rrb-discovery-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: rrb-app
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:10.0.1
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
              subPath: data
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
  namespace: rrb-app
  labels:
    app: notification-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-api
  template:
    metadata:
      labels:
        app: notification-api
    spec:
      containers:
        - name: notification-api
          image: ralfx22/rrb-notification-api
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api-kafka
  namespace: rrb-app
  labels:
    app: notification-api-kafka
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: notification-api-kafka
  template:
    metadata:
      labels:
        app: notification-api-kafka
    spec:
      containers:
        - name: notification-api-kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 29093
              name: controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: rrb-app
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.43.0
          ports:
            - containerPort: 9090
              name: http
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: rrb-app
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.11
          ports:
            - containerPort: 6379
              name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api
  namespace: rrb-app
  labels:
    app: transaction-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-api
  template:
    metadata:
      labels:
        app: transaction-api
    spec:
      containers:
        - name: transaction-api
          image: ralfx22/rrb-transaction-api
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transaction-api-postgres
  namespace: rrb-app
  labels:
    app: transaction-api-postgres
spec:
  serviceName: transaction-api-postgres
  replicas: 1
  selector:
    matchLabels:
      app: transaction-api-postgres
  template:
    metadata:
      labels:
        app: transaction-api-postgres
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: transaction-api-postgres
          image: postgres:15.2
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: transaction-api-postgres-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: rrb-app
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:2.24.0
          ports:
            - containerPort: 9411
              name: http
